<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World!</string>
    <string name="app_name">utter!</string>
    <string name="twofortyfouram_locale_breadcrumb_format">%1$s%2$s%3$s</string>
    <string name="twofortyfouram_locale_breadcrumb_separator"> &gt; </string>
    <string name="twofortyfouram_locale_menu_dontsave">Cancel</string>
    <string name="twofortyfouram_locale_menu_help">Help</string>
    <string name="twofortyfouram_locale_menu_save">Done</string>
    <string name="cancel_button">Cancel</string>
    <string name="upgrade_button">Upgrade</string>
    <string name="ok_button">OK</string>
    <string name="error_dialog_title">Error!</string>
    <string name="install_button">Install</string>
    <string name="install_notes_title">Install Catch Notes?</string>
    <string name="install_notes_message">This feature requires Catch Notes, the easiest way to take notes on the go!\n\n\"Top 10 Apps All Android Users Should Try\" - TechCrunch\n\nWould you like to install Catch Notes?</string>
    <string name="notes_intent_error">Failed to launch the Catch Notes intent.</string>
    <string name="upgrade_notes_title">Upgrade Catch Notes?</string>
    <string name="upgrade_notes_message">This feature requires a newer version of Catch Notes, the easiest way to take notes on the go!\n\n\"Top 10 Apps All Android Users Should Try\" - TechCrunch\n\nWould you like to upgrade Catch Notes?</string>
    <string name="market_error_message">An error occurred while attempting to display the Android Market.</string>
    <string name="message">Click any button to test Catch Intents:</string>
    <string name="create_simple_note_button">Create a Simple Note</string>
    <string name="create_image_note_button">Create a Note with Image</string>
    <string name="create_quick_note_button">Add a Quick Note</string>
    <string name="create_location_note_button">Create a Location Tagged Note</string>
    <string name="view_notes_button">View Notes</string>
    <string name="view_tagged_notes_button">View Tagged Notes</string>
    <string name="view_stream_button">View Stream</string>
    <string name="cursor_positioning_button">Cursor Positioning Example</string>
    <string name="voice_recording_button">Record a Voice Note</string>
    <string name="reminder_button">Add a Reminder Note</string>
    <string name="toast_quick_note">Quick note added.</string>
    <string name="ime_name">utter!</string>
    <string name="app_name_no">utter</string>
    <string name="power_user"> - Power User!</string>
    <string name="plugin_name">utter!</string>
    <string name="plugin_hint">Enter variable name</string>
    <string name="app_name_i">utter! </string>
    <string name="app_version">utter! version-3.0.2B</string>
    <string name="app_version_short">V3.0.2B</string>
    <string name="email_hint">Enter e-mail address</string>
    <string name="extra_hint">Optional data</string>
    <string name="words_hint">Word or phrase here</string>
    <string name="replace_hint">Replacement here</string>
    <string name="action_hint">Optional action</string>
    <string name="nickname_hint">Bum face</string>
    <string name="password_hint">Enter password</string>
    <string name="vr_hint">Start Voice Recognition</string>
    <string name="ve_hint">Set Response Language</string>
    <string name="existing_password_hint">Current password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="phrase_hint">Who is the fairest of them all</string>
    <string name="response_hint">Why you of course, se~giggle</string>
    <string name="intro_hint">I\'m listening oh wonderful one</string>
    <string name="variable_hint">%Varname</string>
    <string name="command_content">• Start of command\n+ Continue to say...\n/ Say only one of\n() Optional\n~ Interactive command\n[D] Disabled\n[R] Root only\n\nSet Your Name!\n• Call me + \'your name\' \n\nCancel Command\n• Cancel \n• Never mind \n• Shush! \n• Cancel cancel [mid-sentence] \n\nTime\n• What\'s the time ? \n• What\'s the time in \n+ \'City Country\' ? \n\nDate\n• What\'s the date ? \n• What date is it? \n\nWeather\n• What\'s the weather doing ? \n• What\'s the weather like in +\'City Country\' ? \n\nTexting\n• Text + \'contact name\' ~ \n• Read my last text message \n\nEmailing\n• Email + \'contact name\' ~ \n\nFacebook\n• Facebook status ~ \n\nTwitter\n• Tweet ~ \n\nFoursquare\n• Checkin to + \'venue name\' \n\nBattery\n• What is my battery \n+ level \n+ temperature \n+ health \n+ status \n+ voltage \n\nContacts\n• Display contact +\'contact name\' \n\nCalling\n• Skype +\'contact name\' \n• Call +\'contact name\' ~ \n• Call +\'contact name\' at/on \n+ home/work/mobile \n\n• Call +\'number\' \n• Redial \n• Call back \n\nMusic\n• Play +\'artist\' +\'track name\' \n• Stream +\'track name\' [Google Music] \n• Spotify +\'track name\' [D] \n\nApplications\n• Open/launch/load +\'name of app\' \n• Kill +\'name of app\' \n• Which application am I using ? \n• Application settings +\'name of app\'\n\n\n• Search for\n\n+ trending/editor\'s choice/top paid/top free\n\n+ top new free/top new paid/featured/top grossing\n\n+ applications\n\t\n\n\nWiFi\n• Toggle WiFi \n• Turn/switch on/off WiFi \n\nMobile Data\n• Toggle (mobile) data \n• Turn/switch on/off (mobile) data \n\nBluetooth\n• Toggle Bluetooth \n• Turn/switch on/off Bluetooth \n\nAirplane Mode\n• Toggle airplane mode \n• Turn/switch on/off airplane mode \n\nNavigation\n• Navigate to +\'destination\' \n• Navigate to contact +\'contact name\' +(at + home/work) \n• Find my car \n\nCalendar\n• Set/create/new (a) appointment/event/calendar entry \n+ event details \n+ (called + event name) \n\nAlarms\n• Set (an) alarm/reminder in +\'hours minutes\' called +\'alarm name\' \n\nTranslation\n• Translate to \n+ German +\'phrase\' \n+ French +\'phrase\' \n+ Romanian +\'phrase\' \n+ Spanish +\'phrase\' \n+ Italian +\'phrase\' \n+ Polish +\'phrase\' \n\nWeb Search\n• Search \n+ Google +\'your search term\' \n+ Bing +\'search term\' \n+ Yahoo +\'search term\' \n+ for images/pictures of +\'search term\' \n• Go to +\'website name\' dot com/net/etc \n\nVideo Search\n• Search \n+ for videos of +\'search term\' \n\nMovie Search\n• Search \n+ for the movie/film +\'title\' \n\nNotes\n• New note \n• New voice note \n\nVolume\n• Set sound profile to \n+ vibrate \n+ silent \n+ normal \n• Speak louder \n• Speak maximum \n• Speak softer \n• Speak minimum \n\nSpelling and Meanings\n• Spell +\'word\' \n• Define +\'word\' [D] \n\nClipboard\n• Read the clipboard \n• Toast the clipboard \n• Translate the clipboard \n• Remember this +\'clipboard content\' \n\nFile Management\n• Browse \n+ directory +\'directory name\' \n+ subdirectory +\'subdirectory name\' [slow] \n\nScreenshot[R] \n• Take a screenshot \n\nRoot Functions[R!] \n• Superuser \n+ reboot \n+ hot reboot \n+ reboot recovery \n+ reboot bootloader \n+ set CPU governor to +\'governor name\' \n\nLocation Services\n• Where am I? [D] \n• Set this location as +\'location profile name\' ~ [D] \n• I\'ve parked my car \n• Where\'s my car? \n\nPassword \n• User password ~ \n\nGoogle Earth\n• Fly to +\'location name\' \n\nTasker\n• Display tasks \n• Run task +\'your task name\' \n\nRepeat Utterance\n• Pardon \n• Can you repeat that? \n• Say that again \n• What did you say? \n\nShake-To-Wake\n• Enable/Disable shake \n• Set shake to \n+ very low/low/medium/high/very high \n\nWave-To-Wake\n• Enable/Disable wave \n\nVisual Results\n• Enable/Disable visual results \n• Float command list \n\nDevice Settings\n• settings \n• wifi settings \n• bluetooth settings \n• data settings \n• time settings \n• date settings \n• voice search settings \n• tts/text-to-speech settings \n• device settings \n• accessibility settings \n• apn settings \n• application settings \n• display settings \n• input settings \n• storage settings \n• locale settings \n• memory/storage/sd card settings \n• network operator settings \n• nfc settings \n• privacy settings \n• quick launch settings \n• search settings \n• sound/volume settings \n• sync settings \n• dictionary settings \n• location settings \n• Application settings +\'name of app\'</string>
</resources>
